--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 
 .card {
   background-color: hsl(0, 0%, 100%);
-  margin: 10rem auto;
+  margin: 20rem auto;
   width: 32rem;
   height: 49.9rem;
   border-radius: 2rem;
@@ -47,19 +47,22 @@ body {
 }
 
 .card .text h1 {
-  font-size: 2rem;
+  font-size: 2.2rem;
   color: hsl(218, 44%, 22%);
   font-weight: 700;
+  letter-spacing: 1.5;
 }
 
 .card .text p {
   font-size: 1.5rem;
+  letter-spacing: 1.5;
   color: hsl(216, 15%, 48%);
   font-weight: 400;
 }
 
 .attribution {
-  position: absolute;
-  inset: 62rem 0 0 61.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 1.6rem;
 }
