--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,13 @@ html {
 }
 
 body {
+  margin-top: 15rem;
   background-color: hsl(212, 45%, 89%);
 }
 
 .card {
   background-color: hsl(0, 0%, 100%);
-  margin: 30rem auto;
+  margin: auto;
   width: 32rem;
   height: 49.9rem;
   border-radius: 2rem;
